- interrupts optimization prozess if a node will be cutoff, which allows the solution
- fixed bug with wrong abort criterion in presolving
- fixed wrong assert in cons_knapsack.c and handled a special this case in simplifyInequalities()
- fixed bug in SCIPgetSolVals() similar to SCIPgetSolVal(): try to get original variables of transformed ones if the solution lives in original space

plugins:
- added interface to QSopt due to Daniel Espinoza
- added reader for FlatZinc models (reader_fzn.{c,h})
- added multi-commodity-flow cut separator


SCIP version 1.1.0
===============

compiling:
- added in all make/make.* "GMP_FLAGS" and "GMP_LDFLAGS"
- new flag GMP with values ("auto", "true, and "false"); in case of "auto" the library gmp is linked if 
  ZIMPL is included
- modified makefiles to accept ZIMPLOPT and LPSOPT flags (with values "opt" or "dbg" and default being "opt"),
  and removed LPS=spxdbg and LPS=clpdbg
- added "make/make.project" as default make include for external projects using SCIP
- adapted all makefiles of the examples accordingly
- added possibility to compile shared libraries in makefiles (and added make/make.linux.x86.gnu.opt-shared)
- replaced <string> by <cstring> in all C++-interfaces to get 'strlen()' included (gcc-4.3 gave an error)
- Moved -rpath option for ld to linux-specific Makefiles.
- Re-activated readline library on darwin/ppc.
- added target spx132 for SoPlex version 1.3.2
- removed tag make testpre (useless without corresponding scripts)
- added tag testcount (make testcount); this allows for testing counting problem 

interface:
- new method SCIPchgChildPrio() to change the node selection priority of the given child
- new method SCIPconsGetPos()
- new parameters "extension" and "genericnames" in SCIPprintTransProblem() defining the 
  requested format or NULL for default CIP format and using generic names for the variables and constraints